<resources>
    <string name="app_name">RadioGroup</string>
    <string name="song_url_input">Enter Song Url</string>
    <string name="add_image">Add Image</string>
    <string name="choose_image">Choose Image</string>
    <string name="song_name_input">Song Name</string>
    <string name="save">Save</string>
    <string name="IMAGE">IMAGE</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose Image</string>
    <string name="close">Close</string>
    <string name="upload_image">Upload Image</string>
    <string name="removing_song_title">Delete Song</string>
    <string name="are_you_sure_remove">"Are you sure you want to delete - "</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="signin">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repassword">Confrim Password</string>

    <string name="signup">Sign Up</string>
    <string name="signupdesc">Don\'t have an account?</string>
    <string name="logindesc">Already have an account?</string>
    <string name="user_name">Name</string>
    <string name="group_name">Group Name</string>
    <string name="group_members">Group Members</string>
    <string name="new_group">Create Group</string>
    <string name="new_group_name">Name</string>
    <string name="description">Description</string>
    <string name="about">About</string>
    <string name="members">Members</string>
    <string name="start_listening">Start Listening</string>
    <string name="stop_listening">Stop Listening</string>
    <string name="you">You</string>
    <string name="title_activity_group_details">GroupDetails</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="name">Name</string>
    <string name="Members">Members</string>
    <string name="leave_group">Leave Group</string>
    <string name="total">Total</string>
    <string name="group_details">Group Details</string>
    <string name="username">UserName</string>
    <string name="join_the_group">Join Group</string>
    <string name="close_group">Close Group</string>
    <string name="edit_group">Edit Group</string>
    <string name="search_group_name">Search group name</string>

    <string name="radio_tab">Radio</string>
    <string name="chat_tab">Chat</string>
    <string name="copy_group_link">Copy Group Link</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="join_live">Join Live Air</string>
    <string name="click_here_go_live">* Press the button in order to start listening to the channel</string>
    <string name="click_and_hold">Press and hold the button in order to start speaking</string>
    <string name="click_here_leave_channel">Press the button to leave the channel and go offline</string>
    <string name="privacy">Privacy</string>
    <string name="private_str">Private</string>
    <string name="public_str">Public</string>

    <string name="logged_out">Logged out</string>
    <string name="login">LogIn</string>
    <string name="sign_up">Sign up</string>
    <string name="logout">Logout</string>
    <string name="recorder">Recorder</string>
    <string name="enter_profile_name">Enter Profile Name</string>
    <string name="enter_profile_bio">Enter Profile Bio</string>
    <string name="edit_name_and_bio">Edit Name and Bio</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="enter_message">Enter message...</string>
    <string name="send">Send</string>
    <string name="edit_profile">Edit profile</string>
    <string name="groups_by_this_user">Groups by this user</string>
    <string name="private_group">Private Group</string>
    <string name="message_content">Message content</string>
    <string name="bio">Bio</string>
    <string name="loading">Loading...</string>
    <string name="profile_name">Profile Name</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>

    <string name="wrong_password">Wrong password</string>
    <string name="user_doesnt_exist">User does not exist</string>
    <string name="too_many_logins">Too many login attempts, try again later</string>
    <string name="email_in_use">This email address is already in use</string>
    <string name="password_weak">Invalid password (Password should be at least 6 characters</string>
    <string name="please_fill_fields">Please fill in all fields</string>

    <string name="group_desc">Group Description</string>
    <string name="home">Home</string>
    <string name="current_active_users">Active Users:</string>
    <string name="no_results">No Results Found</string>
    <string name="open_new_channel">No Channels. Create or join one from the explore</string>
    <string name="leave_channel">Leave Channel</string>
    <string name="admin">Admin</string>
    <string name="me">Me</string>
    <string name="are_you_sure_logout">Are you sure you want to logout?</string>

</resources>