<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.WelcomeFragment"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/welcome_background">

    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_margin="15dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/lobster"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:src="@drawable/app_icon_white"
        android:scaleType="fitCenter"
        android:layout_margin="10dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signin"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:id="@+id/welcome_mode_title"
                    android:textColor="@android:color/white"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:background="@color/colorLightBackground"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:background="@color/colorLightBackground"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/user_name"
                    android:visibility="gone"
                    android:id="@+id/register_name_container"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:background="@color/colorLightBackground"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="0dp"
                    android:id="@+id/tv_error" />

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/btn_login_signup"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/signin"
                    app:finalCornerAngle="50dp"
                    app:initialCornerAngle="6dp"
                    app:spinning_bar_color="#FFFFFF"
                    app:spinning_bar_padding="0dp"
                    app:spinning_bar_width="3dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    />

<!--                <com.google.android.material.button.MaterialButton-->
<!--                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/signin"-->
<!--                    android:textColor="@android:color/white"-->
<!--                    app:cornerRadius="6dp"-->
<!--                    android:id="@+id/btn_login_signup"-->
<!--                    android:enabled="true"-->
<!--                    android:layout_marginTop="15dp"-->
<!--                    android:layout_marginBottom="15dp"-->
<!--                    />-->
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signupdesc"
                    android:textSize="16sp"
                    android:layout_marginEnd="5dp"
                    android:id="@+id/change_mode_title"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:id="@+id/change_mode_btn"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>