<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/colorDarkBackground"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/new_group_name"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_group_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_group_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                >

                <ImageView
                    android:id="@+id/new_group_view"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:background="@drawable/upload_image_view"
                    android:visibility="invisible"
                    android:scaleType="centerCrop"
                    />

                <TextView
                    android:id="@+id/upload_image_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:alpha="1"
                    android:background="@android:color/transparent"
                    android:text="@string/upload_image"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </RelativeLayout>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Private Group"
                android:id="@+id/cb_private"
                android:layout_margin="15dp"/>

        </LinearLayout>
    </ScrollView>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/save_group"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:finalCornerAngle="50dp"
        app:initialCornerAngle="6dp"
        app:spinning_bar_color="#FFFFFF"
        app:spinning_bar_padding="0dp"
        app:spinning_bar_width="3dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/save"
        app:cornerRadius="6dp"
        android:layout_margin="15dp"
        android:enabled="false"
        />


</LinearLayout>